--- a/app/src/main/res/anim/fadeout.xml
+++ b/app/src/main/res/anim/fadeout.xml
@@ -2,5 +2,6 @@
 <alpha xmlns:android="http://schemas.android.com/apk/res/android"
     android:interpolator = "@android:anim/linear_interpolator"
     android:duration="1000"
+    android:zAdjustment="bottom"
     android:fromAlpha="1.0"
     android:toAlpha="0.0"/>
