--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,49 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/bg"
     tools:context="com.jimdoesnotgym.ms076.halloweencountdown.MainActivity">
 
+
+    <LinearLayout
+        android:layout_marginTop="40dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        
+        <TextView
+            android:id="@+id/txtDaysRemain"
+            android:text="13"
+            android:textColor="#FFFFFF"
+            android:textSize="150sp"
+            android:gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:text="DAYS"
+            android:textColor="#d81e1e"
+            android:textSize="30sp"
+            android:gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/txtLongString"
+            android:text="13 DAYS 12:59:59"
+            android:textColor="#d81e1e"
+            android:textSize="30sp"
+            android:gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        
+        <!--<ImageView
+            android:id="@+id/pumpkin"
+            android:layout_gravity="right"
+            android:src="@drawable/anim_pumpkin"
+            android:layout_marginRight="50dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp" />-->
+    </LinearLayout>
 </RelativeLayout>
